src/snapshots/aidl_parser__ast__tests__method_arg_with_name.snap
---
source: src/ast.rs
expression: "rules::method_arg(input, &lookup(input))?"

---
Arg(
  direction: Unspecified,
  name: Some("albert"),
  arg_type: Type(
    name: "TypeName",
    kind: Custom,
    generic_types: [],
    definition: None,
    symbol_range: "...",
  ),
  doc: None,
  annotations: [],
)
