src/snapshots/aidl_parser__ast__tests__method_oneway.snap
---
source: src/ast.rs
expression: "rules::method(input, &lookup(input))?"

---
Method(Method(
  oneway: true,
  name: "myMethod",
  return_type: Type(
    name: "TypeName",
    kind: Custom,
    generic_types: [],
    definition: None,
    symbol_range: "...",
  ),
  args: [],
  annotations: [],
  doc: None,
  symbol_range: "...",
  full_range: "...",
))
