src/snapshots/aidl_parser__ast__tests__method_with_javadoc.snap
---
source: src/ast.rs
expression: "rules::method(input, &lookup(input))?"

---
Method(Method(
  oneway: false,
  name: "myMethod",
  return_type: Type(
    name: "void",
    kind: Void,
    generic_types: [],
    definition: None,
    symbol_range: "...",
  ),
  args: [],
  annotations: [],
  doc: Some("Method docu"),
  symbol_range: "...",
  full_range: "...",
))
