src/snapshots/aidl_parser__ast__tests__method_without_arg.snap
---
source: src/ast.rs
expression: "rules::method(input, &lookup(input))?"

---
Method(Method(
  oneway: false,
  name: "myMethod",
  return_type: Type(
    name: "TypeName",
    kind: Custom,
    generic_types: [],
    definition: None,
    symbol_range: Range(
      start: Position(
        offset: 0,
        line_col: (1, 1),
      ),
      end: Position(
        offset: 8,
        line_col: (1, 9),
      ),
    ),
  ),
  args: [],
  annotations: [],
  symbol_range: Range(
    start: Position(
      offset: 9,
      line_col: (1, 10),
    ),
    end: Position(
      offset: 17,
      line_col: (1, 18),
    ),
  ),
  full_range: Range(
    start: Position(
      offset: 0,
      line_col: (1, 1),
    ),
    end: Position(
      offset: 21,
      line_col: (1, 22),
    ),
  ),
))
