src/snapshots/aidl_parser__ast__tests__package.snap
---
source: src/ast.rs
expression: "rules::package(input, &lookup(input))?"

---
Package(
  name: "x",
  symbol_range: Range(
    start: Position(
      offset: 8,
      line_col: (1, 9),
    ),
    end: Position(
      offset: 8,
      line_col: (1, 9),
    ),
  ),
)
