src/snapshots/aidl_parser__ast__tests__package1.snap
---
source: src/ast.rs
expression: "rules::package(input, &lookup(input))?"

---
Package(
  name: "x",
  symbol_range: "...",
)
